--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,28 +2,50 @@ docs_dir: mkdocs
 site_dir: docs
 site_name: GH-Repos
 site_description: GitHub Pages as APT repositories with automated package management
+site_author: Alex O. Karasulu
+copyright: Copyright &copy; 2025 Alex O. Karasulu
 repo_url: https://github.com/akarasulu/gh-repos
 repo_name: gh-repos
 nav:
   - Home: index.md
-  - Getting Started: usage.md
-  - Design & Architecture: design.md
-  - Build Process: build.md
-  - Customization: customize.md
-  - Releases: releases.md
+  - User Guide:
+    - Getting Started: usage.md
+    - Customization: customize.md
+  - Developer Guide:
+    - Design & Architecture: design.md
+    - Build Process: build.md
+  - Project:
+    - Releases: releases.md
 theme:
   name: material
   palette:
-    primary: indigo
-    accent: indigo
+    # Palette toggle for light mode
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   features:
     - navigation.tabs
     - navigation.sections
     - navigation.expand
     - navigation.top
+    - navigation.instant
+    - navigation.tracking
+    - navigation.indexes
     - search.highlight
     - search.share
+    - search.suggest
     - content.code.copy
+    - content.code.annotate
   icon:
     repo: fontawesome/brands/github
 
@@ -54,6 +76,11 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/akarasulu/gh-repos
+      name: Source Code
+    - icon: fontawesome/solid/book
+      link: https://akarasulu.github.io/gh-repos/
+      name: Documentation
   version:
     provider: mike
+  generator: false
 
